--- a/hardhat/.gitignore
+++ b/hardhat/.gitignore
@@ -121,6 +121,7 @@ dist
 .env.development.local
 .env.test.local
 .env.production.local
+.secret
 
 npm-debug.log*
 yarn-debug.log*
@@ -130,3 +131,4 @@ hardhat/artifacts
 hardhat/cache
 *.ptau
 hardhat/deployments
+powersOfTau28_hez_final_10.ptau
